# pam-v5

./: .gitignore  README.md  generate_fixtures.py  pyproject.toml  regenerate_fixture.py  smoke_test.py  smoke_test_drc.py  smoke_test_inductor.py  smoke_test_integration.py  smoke_test_lmatch_3dev.py  smoke_test_lvs.py  smoke_test_lvs_integration.py  smoke_test_mim.py  smoke_test_state_manager.py  smoke_test_stretch.py  smoke_test_tl.py  test_coverage_gaps.py
config/: mapping_rules.yaml
config/drc_rules/: simple_rf.yaml
docs/: ARCHITECTURE.md  USER_GUIDE.md
examples/: README.md  cascade_lc.net  cascade_lc_modified.net  dual_pi.net  dual_pi_modified.net  l_match.net  l_match_modified.net  l_match_modified2.net  pi_match.net  pi_match_modified.net  t_match.net  t_match_modified.net  target_params.json  tl_only.net  tl_only_modified.net
pcells/: __init__.py  base.py  registry.py
pcells/mim_capacitor/: mapping.yaml  pcell.py
pcells/spiral_inductor/: mapping.yaml  pcell.py
pcells/transmission_line/: mapping.yaml  pcell.py
scripts/: generate_initial_gds.py
src/core/: __init__.py  cli.py  runner.py
src/executor/: __init__.py  klayout_executor.py
src/mapper/: __init__.py  engine.py
src/parser/: __init__.py  base.py  exceptions.py  factory.py  kicad_netlist.py  netlist_diff.py  target_params.py  types.py  value_parser.py
src/routing/: __init__.py  base.py  initial_router.py  pin_extractor.py  types.py  wire_extractor.py  wire_finder.py
src/validator/: __init__.py  base.py  drc_runner.py  lvs_runner.py  ref_mapper.py
state/: snapshot_manager.py
tests/: test_initial_router.py  test_netlist_diff.py  test_pin_extractor.py  test_runner.py  test_snapshot_manager.py  test_value_parser.py  test_wire_extractor.py
(+9 files in other folders)
