[project]
name = "pam-mvp"
version = "0.1.0"
description = "PAM Layout Iteration Automation Engine"
requires-python = ">=3.10"
dependencies = [
    "klayout>=0.28",
    "sexpdata>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
pam = "src.core.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["pcells*", "src*", "state*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
